<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/logout"
            android:textColor="@color/colorAccent"
            android:background="@drawable/rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addExpText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/add_income"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addExpenditure"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addExpenditure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_expenditure"
            android:background="@drawable/border_gtn"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addExpText" />

        <com.anychart.AnyChartView
            android:id="@+id/any_chart_view2"
            android:layout_width="0dp"
            android:layout_height="352dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.anychart.AnyChartView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="409dp"
            android:layout_height="297dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/addExpText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/any_chart_view2">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add_bill"
                    android:background="@drawable/border_gtn"
                    android:textColor="@color/colorPrimary"

                    app:layout_constraintBottom_toTopOf="@+id/monthly"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/expenditure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenditure"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/totalText"
                    app:layout_constraintEnd_toStartOf="@+id/earningText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/earningText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earnings"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/totalText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/expenditure"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/totalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overall"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.38" />

                <Button
                    android:id="@+id/monthly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/view_monthly_expenses"
                    android:textColor="@color/colorAccent"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar4"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="135dp"
                    android:layout_height="113dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/earningText"
                    app:layout_constraintVertical_bias="0.238" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>